// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should display the developer edition as installed 1`] = `
<div
  className="spacer-bottom marketplace-editions"
>
  <EditionBox
    currentEdition="developer"
    edition={
      Object {
        "homeUrl": "more_url",
        "key": "comunity",
      }
    }
    key="comunity"
  />
  <EditionBox
    currentEdition="developer"
    edition={
      Object {
        "downloadUrl": "download_url",
        "homeUrl": "more_url",
        "key": "developer",
      }
    }
    key="developer"
  />
</div>
`;

exports[`should display the edition boxes correctly 1`] = `
<div
  className="spacer-bottom marketplace-editions"
>
  <EditionBox
    currentEdition="community"
    edition={
      Object {
        "homeUrl": "more_url",
        "key": "comunity",
      }
    }
    key="comunity"
  />
  <EditionBox
    currentEdition="community"
    edition={
      Object {
        "downloadUrl": "download_url",
        "homeUrl": "more_url",
        "key": "developer",
      }
    }
    key="developer"
  />
</div>
`;
